2006-07-22  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac: Raise version number to 1.0.1
	* NEWS: Version 1.0.1
	* lib/mailcap.c (expand_string, run_test, run_mailcap): Fix memory
	allocation bugs. Place all temporary strings in the obstack. 

	Fix coredump on `cd x<TAB>' in mail. Bug reported by
	Daniel Kahn Gillmor.
	
	* include/mailutils/folder.h (mu_folder_create_from_record): New
	function.
	* mailbox/folder.c (mu_folder_create_from_record): New
	function.
	(mu_folder_create): Interface to mu_folder_create_from_record
	* mailbox/mutil.c (mu_scheme_autodetect_p): Return true if scheme
	is the name of an existing file or directory.
	
	* mail/mailline.c (file_generator): Remove leading pathlen
	characters from the returned names.
	
	* libproto/mbox/folder.c: Minor formatting changes
	* mail/mail.c: Likewise

	* THANKS: Add Daniel Kahn Gillmor
	
2006-07-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac (AC_CHECK_FUNCS): Add setlocale

2006-07-06  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/rfc/rfc2231.txt: New file
	* doc/rfc/Makefile.am (EXTRA_DIST): Add rfc2231.txt
	* mh/TODO: Update

	Sources at this point are tagged rel-1_0 

	* NEWS: Update
	* configure.ac: Raise version number to 1.0
	* direntry: Update for 1.0
	* doc/texinfo/Makefile.am: Removed hack introduced on
	2006-06-15. It triggered unnecessary doc updates.
	* scripts/guile-1.6/guile-doc-snarf (snarf_doc): Do not use \n in
	the replacement part of a sed expression for the sake of older
	seds. Use a more sophisticated approach with changing hold/pattern
	spaces instead.
	* scripts/guile-1.6/guile-doc-snarf.awk: Adopt for the new output
	format of snarf_doc 

2006-06-27  Sergey Poznyakoff  <gray@gnu.org.ua>

	* gnulib.modules (mailutils): Add sha1
	* lib/Makefile.am: Update
	* mailbox/Makefile.am: Update
	* m4/gnulib.m4: Update
	* sql/mysql.c: Implement verification against mysql v4 passwords. 
	
	Update by gnulib-sync. 

	* lib/allocsa.c: Updated
	* lib/allocsa.h: Updated