@@ -26,6 +26,21 @@ mail_test -noprompt "quit" \
 
 # Start again using the same mailbox
 mail_start -reuse-spool "--file=%mbox1"
+# Go to the last message and do delete 4 times
+mail_command "4"
+mail_command "delete"
+mail_command "delete"
+mail_command "delete"
+mail_command "delete"
+# This delete should fail. Version 1.0 failed as reported by
+# Dan Jacobson
+# References:
+#   <E1G5mnI-0004Zp-2X@jidanni1>
+#   http://lists.gnu.org/archive/html/bug-mailutils/2006-07/msg00023.html
+mail_test "delete" "No applicable messages"
+
+# Start again using the same mailbox
+mail_start -reuse-spool "--file=%mbox1"
 mail_test "h" \
 	">U   1 Bar                Fri Dec 28 23:28  16/579   Re: Jabberwocky"\
 	" U   2 Sergey Poznyakoff  Sat Jul 13 00:43  44/1645  Simple MIME"\
