@@ -1,3 +1,11 @@
+2006-07-27  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	* mail/page.c (top_of_page,cursor,page_map,page_size)
+	(page_avail,page_map): Hide as static
+	(fill_page_map): Reset cursor if it points past the last
+	message.
+	* mail/testsuite/mail/write.exp: Add new testcase 
+
 2006-07-22  Sergey Poznyakoff  <gray@gnu.org.ua>
 
 	* configure.ac: Raise version number to 1.0.1
